...
    avatar.ShowAvatar(user = user,user.description!!)
    if(!showEditField && mesLoad)ChatMessageField().Show( { showEditField = it },messages, user)
    if(showEditField && mesLoad)ChatMessageFieldEnter().Show({ showEditField = it },messages,speechRecognizer,intent, user,profileData)
    Card(
        modifier = Modifier
            .fillMaxWidth()
            .testTag("ChatScreen")
        ,backgroundColor = Color.Black.copy(alpha = 0.7f)
    ){
        Text(text = user.name ?: "No Data", color = Color.White, fontSize = 25.sp, modifier = Modifier
            .fillMaxWidth()
            .padding(10.dp), textAlign = TextAlign.Center)
    }
...
