...
                            if (textField.isNotEmpty()) {
                                showEdit(false)
                                messages.messages.add(Message("",textField, "", "", false, "0.0.20"))
                                saveInFirebase(user.name!!,textField, user.lang!!,profileData.user.lang!!)
                            }
                        })
                    Image(painter = painterResource(id = R.drawable.speaker_icon), contentDescription ="Start Listen", modifier = Modifier
                        .padding(10.dp)
                        .size(50.dp)
                        .clickable {speechRecognizer.startListening(intent)}
                        .testTag("Start Listen"))
                }
                Card(
...
                            Button(onClick = { textField = "" },colors = ButtonDefaults.buttonColors(backgroundColor = Color.Transparent)) {
                                Icon(Icons.Default.Close,"", tint = Color.White)
                            }
                        }
                        TextField(value = textField, onValueChange = {textField = it}, modifier = Modifier
                            .fillMaxWidth()
                            .weight(3f).testTag("Enter message"),
                            colors = TextFieldDefaults.textFieldColors(
                                textColor = Color.White,
                                cursorColor = Color.White,
                                focusedIndicatorColor = Color.Transparent,
                                unfocusedIndicatorColor = Color.Transparent
                            ))
...
